--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "dev": "vite",
     "start": "vite",
     "build": "tsc && vite build",
-    "prod": "vite preview"
+    "prod": "vite preview",
+    "upload": "npm run build && upload-wa-map",
+    "upload-only": "upload-wa-map"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
     "@workadventure/iframe-api-typings": "^1.18.11",
+    "@workadventure/upload-maps": "^1.6.3",
     "dotenv": "^16.3.1",
     "typescript": "^4.9.5",
-    "vite": "^4.5.2",
+    "vite": "^4.5.3",
     "wa-map-optimizer-vite": "^1.1.28"
   },
   "dependencies": {
